//
//  Copyright (c) 2016 Google Inc.
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.
//

import UIKit
import FirebaseStorage

@objc(DownloadViewController)
class DownloadViewController: UIViewController {
  @IBOutlet var imageView: UIImageView!
  @IBOutlet var statusTextView: UITextView!
  var storageRef: StorageReference!

  override func viewDidLoad() {
    super.viewDidLoad()
    storageRef = Storage.storage().reference()

    let paths = NSSearchPathForDirectoriesInDomains(.documentDirectory, .userDomainMask, true)
    let documentsDirectory = paths[0]
    let filePath = "file:\(documentsDirectory)/myimage.jpg"
    guard let fileURL = URL(string: filePath) else { return }
    guard let storagePath = UserDefaults.standard.object(forKey: "storagePath") as? String else {
      return
    }

    // [START downloadimage]
    storageRef.child(storagePath).write(toFile: fileURL) { result in
      switch result {
      case let .success(url):
        self.statusTextView.text = "Download Succeeded!"
        self.imageView.image = UIImage(contentsOfFile: url.path)
      case let .failure(error):
        print("Error downloading:\(error)")
        self.statusTextView.text = "Download Failed"
      }
    }
    // [END downloadimage]
  }
}
